--- a/Update entity/remove-custom-props.yaml
+++ b/Update entity/remove-custom-props.yaml
@@ -23,4 +23,4 @@ tasks:
         - StreamAccess=ADGroup2
     options:
       multiple: false
-      customPropertyOperations: remove
+      customPropertyOperation: remove
