--- a/Update entity/set-custom-props.yaml
+++ b/Update entity/set-custom-props.yaml
@@ -24,4 +24,4 @@ tasks:
         - StreamAccess=ADGroup2
     options:
       multiple: false
-      customPropertyOperations: set
+      customPropertyOperation: set
