--- a/Update entity/add-custom-props.yaml
+++ b/Update entity/add-custom-props.yaml
@@ -23,4 +23,4 @@ tasks:
         - StreamAccess=ADGroup2
     options:
       multiple: false
-      customPropertyOperations: add
+      customPropertyOperation: add
